# claude-code-rust-port

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PORTING_PLAN.md  README.md
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-commands/: Cargo.toml
crates/harness-commands/src/: lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: lib.rs
crates/harness-runtime/: Cargo.toml
crates/harness-runtime/src/: lib.rs
crates/harness-session/: Cargo.toml
crates/harness-session/src/: lib.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: lib.rs
