[workspace]
members = [
  "crates/harness-core",
  "crates/harness-session",
  "crates/harness-tools",
  "crates/harness-commands",
  "crates/harness-runtime",
  "crates/harness-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Hamza Abdagic <hamza.abdagic@outlook.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
