[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
harness-commands = { path = "../harness-commands" }
harness-runtime = { path = "../harness-runtime" }
harness-session = { path = "../harness-session" }
harness-tools = { path = "../harness-tools" }
serde_json.workspace = true
